<resources>
    <string name="app_name" translatable="false">LRTMate</string>
    <string name="bottom_sheet_behavior" translatable="false">android.support.design.widget.BottomSheetBehavior</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAYWL_z-TJOBptGAzkXbVB2ZE_NhP27Yx4
    </string>
    <string name="places_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAYWL_z-TJOBptGAzkXbVB2ZE_NhP27Yx4
    </string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Open">OPEN</string>
    <string name="Close">CLOSE</string>
    <string name="package_name" translatable="true">com.example.fypmetroapp</string>
    <string name="msg_token_fmt"></string>
    <string name="wheelchair">Indicates Stations with Wheelchair Access</string>
    <string name="bus_lines">Indicates A Bus Line at a Station (e.g. Bus 153)</string>
    <string name="parking_text">Indicates Stations with Parking</string>
    <string name="lrt_text">Indicates Light Rail Stations</string>
    <string name="bus_stations_text">Indicates Bus Stations</string>
    <string name="show_drawer">show drawer</string>
    <string name="no_facilities">No access to any facilities at this Station!</string>
    <string name="title_activity_no_access">NoAccess</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_placeholder">Placeholder</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_nav">MainActivity</string>
    <string name="title_activity_one">MainActivity</string>
</resources>