<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="10dp"
    android:layout_gravity="center"
    android:layout_marginVertical="55dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="25dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:backgroundTint="@color/transparent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="15pt"
                    android:gravity="center"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_marginHorizontal="3pt"
                        android:src="@drawable/ic_baseline_info"
                        android:layout_height="wrap_content"
                        app:tint="@color/main_blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:text="Did You Know?" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="10pt"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginVertical="3pt"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="35dp"
                        android:src="@drawable/bus_pin_inflate"
                        android:layout_height="35dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_marginHorizontal="5pt"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/bus_stations_text"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginVertical="3pt"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="35dp"
                        android:src="@drawable/lrt_icon_pin_inflate"
                        android:layout_height="35dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_marginHorizontal="5pt"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/lrt_text"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginVertical="3pt"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="35dp"
                        app:tint="@color/white"
                        android:background="@color/main_blue"
                        android:src="@drawable/ic_parking"
                        android:layout_height="35dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_marginHorizontal="5pt"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/parking_text"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginVertical="3pt"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="35dp"
                        android:src="@drawable/ic_wheelchair"
                        android:background="@color/main_blue"
                        android:layout_height="35dp"
                        app:tint="@color/white" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_marginHorizontal="5pt"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/wheelchair"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginVertical="3pt"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:layout_width="35dp"
                        app:cardCornerRadius="55dp"
                        android:backgroundTint="@color/bright_blue"
                        android:layout_height="35dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="153"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"/>

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:layout_marginHorizontal="5pt"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/bus_lines"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    app:cardCornerRadius="55dp"
                    android:layout_margin="10pt"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_close"
                        android:layout_gravity="center"
                        android:layout_margin="5pt"
                        android:tint="@color/main_blue"
                        android:background="@color/transparent"
                        android:id="@+id/dialog_closeX"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>
            
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>